--- a/package.json
+++ b/package.json
@@ -35,5 +35,9 @@
     "unocss": "^0.61.9",
     "vite": "^5.4.8"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "chess.js": "^1.0.0-beta.8",
+    "svelte-chessground": "^2.0.3"
+  }
 }
