--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@mliebelt/pgn-parser": "^1.4.15",
     "chess.js": "^1.0.0-beta.8",
     "svelte-chessground": "^2.0.3"
   }
