--- a/package.json
+++ b/package.json
@@ -17,10 +17,6 @@
     "@sveltejs/kit": "^2.6.1",
     "@sveltejs/vite-plugin-svelte": "^3.1.2",
     "@types/eslint": "^8.56.12",
-    "@unocss/core": "^0.61.9",
-    "@unocss/extractor-svelte": "^0.61.9",
-    "@unocss/preset-icons": "^0.61.9",
-    "@unocss/preset-uno": "^0.61.9",
     "eslint": "^9.11.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.44.1",
@@ -38,6 +34,7 @@
   "type": "module",
   "dependencies": {
     "@mliebelt/pgn-parser": "^1.4.15",
+    "@picocss/pico": "^2.0.6",
     "chess.js": "^1.0.0-beta.8",
     "svelte-chessground": "^2.0.3"
   }
