--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
   "devDependencies": {
     "@sveltejs/adapter-auto": "^3.2.5",
     "@sveltejs/adapter-static": "^3.0.5",
-    "@sveltejs/kit": "^2.6.1",
-    "@sveltejs/vite-plugin-svelte": "^3.1.2",
+    "@sveltejs/kit": "^2.6.2",
+    "@sveltejs/vite-plugin-svelte": "^4.0.0-next.7",
     "@types/eslint": "^8.56.12",
-    "eslint": "^9.11.1",
+    "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.44.1",
-    "globals": "^15.9.0",
+    "globals": "^15.10.0",
     "prettier": "^3.3.3",
     "prettier-plugin-svelte": "^3.2.7",
-    "svelte": "^4.2.19",
+    "svelte": "^5.0.0-next.262",
     "svelte-check": "^3.8.6",
     "tslib": "^2.7.0",
     "typescript": "^5.6.2",
